fix(drive): restore signal transport marker result